--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/",
+    "setup": "node setup.js",
     "lint:fix": "eslint src/ --fix"
   },
   "keywords": [
